# marin-research-tools

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  reddit_comment_drafter.py  source_attribution_parser.py  style_lint.py
.devcontainer/: devcontainer.json
.github/workflows/: dashboard-daily-rebuild.yml  marin-eval-daily.yml
dashboard/: .gitignore  README.md  package.json
dashboard/lib/: _fetch.js
dashboard/pages/: compare.md  index.md  runs.md  timeline.md
dashboard/pages/llm/: [llm].md
dashboard/scripts/: patch-wasm-to-cdn.mjs
dashboard/sources/marin/: by_category.js  by_llm.js  by_provider.js  connection.yaml  llm_timeseries.js  run_meta.js  timeseries.js
docs/: research-framework.md  responsible-build-policy.md
migrations/: 0003_ai_citation_sources.sql
policies/: README.md  operator_patterns_example.py
pre_registrations/: Q0.yaml  Q1.yaml  Q2.yaml  Q3.yaml  Q4.yaml  Q5.yaml  Q6_hardcover_reader_activity.yaml
research-harness/: .gitignore  METHODOLOGY_NOTE_v4.0.md  README.md  push_snapshot_to_d1.py  run_all_models.py  run_eval.py
research-harness/.github/workflows/: marin-eval-daily.yml
research-harness/marin_models/: __init__.py  claude_web_importer.py  gemini_grounded.py  openai_search.py
research-harness/marin_tasks/: marin_research_v1.yaml  questions.jsonl  utils.py
research-harness/sweeps/2026-05-25/: C1_opus.json  C2_opus.json  D1_opus.json  D2_opus.json  D3_opus.json  G1_opus.json  G2_opus.json  L1_opus.json  L2_opus.json
