[project]
name = "marin-research-tools"
version = "0.1.0"
description = "Pre-publication tooling for an AI-augmented author practice. Public companion to https://marin-t-kael.de/research."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Marin T. Kael", email = "research@marin-t-kael.de" },
]
requires-python = ">=3.10"
keywords = ["author-tooling", "ai-assisted-writing", "content-policy", "reddit", "responsible-build"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://marin-t-kael.de"
Research = "https://marin-t-kael.de/research"
