[project]
name = "marin-research-tools"
version = "0.1.0"
description = "Open methodology tooling for the Marin T. Kael Research Programme — KI-Zitations-Feldlabor (AI Citation Behavior Lab). Public companion to https://marin-t-kael.de/research."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Marin T. Kael", email = "research@marin-t-kael.de" },
]
requires-python = ">=3.10"
keywords = ["AEO", "GEO", "AI-citation-behavior", "knowledge-graph", "instrument-validation", "test-retest", "CUSUM", "n-of-1", "content-policy", "responsible-build"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://marin-t-kael.de"
Research = "https://marin-t-kael.de/research"
Repository = "https://github.com/marintkael/marin-research-tools"
